--- a/assets/index.css
+++ b/assets/index.css
@@ -133,3 +133,19 @@ h3 {
 .tasks-title {
   font-size: 20px;
 }
+
+.div-details {
+  position: fixed; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  width: 80%;
+  max-width: 500px;
+ 
+}
+
